--- a/DataScienceEcosystem.ipynb
+++ b/DataScienceEcosystem.ipynb
@@ -56,12 +56,12 @@
    "id": "da449b2d-8188-4aee-93cb-ddf76eb444bd",
    "metadata": {},
    "source": [
-    "Below are a few examples of evaluating arithmetic expressions in Python"
+    "### Below are a few examples of evaluating arithmetic expressions in Python"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "743c5749-72b8-488b-ab89-4ae884b3bed3",
    "metadata": {},
    "outputs": [
@@ -71,7 +71,7 @@
        "17"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "274f0e63-7bc5-4ceb-9f88-e5b7f7b9ebc8",
    "metadata": {},
    "outputs": [
@@ -108,6 +108,7 @@
     "Objectives:\n",
     "- List popular languages for Data Science\n",
     "- List popular libraries for Data Science\n",
+    "- List popular development environment open source tools used in Data Science\n",
     "- Perform basic arithmetic expressions using Python"
    ]
   },
